# ChangeLog for dev-python/pyside
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Nov 2014; Harold Naparst <harold@alum.mit.edu> ChangeLog:
  Add patch for GtkStyle and pyside-1.2.2.ebuild

*pyside-9999 (29 Nov 2014)

  29 Nov 2014; Harold Naparst <harold@alum.mit.edu> +pyside-9999.ebuild,
  +files/rpath.cmake, +metadata.xml:
  Initial version pyside-9999.ebuild

  29 Nov 2014; Harold Naparst <harold@alum.mit.edu> pyside-9999.ebuild:
  foo
